Bug 481562: Don't create time container for an <svg> element until after it's been bound to a smil-enabled document. r+sr=roc